css/garcrogo.css
/* ==========================================================================
   Core
   ========================================================================== */

html {
    background: #D3F15A;
    color: #2C2A27;
}

body {
    margin: 0 auto;
    width: 800px;

    background: #fff;
}

a {
    color: #70A500;
    text-decoration: none;
}

a:hover,
a:focus {
    text-decoration: underline;
}

ul {
    padding-left: 16px;
}

.content {
    overflow: hidden;
    padding: 0 40px;
}


/* ==========================================================================
   Common
   ========================================================================== */


/* Headings
   ========================================================================== */

.heading {
    font-size: 1.5em;

    margin-top: 40px;
    margin-bottom: 40px;
    position: relative;

    font-weight: lighter;
    text-align: center;
    font-size: 30px;
}

.heading:before {
    content: "";
    display: block;
    position: absolute;
    width: 100%;
    border-bottom: 1px solid #000;
    top: 22px;
}

.heading-inner {
    background: #fff;
    position: relative;
    padding: 0 15px;
}

.heading2 {
    font-size: 1.17em;

    margin-top: 30px;
    margin-bottom: 20px;

    text-align: center;
}

.heading2 em {
    font-style: italic;
    font-weight: normal;
}

.heading3 {
    font-size: 1.17em;
    margin: 1em 0;

    font-weight: lighter;
    text-align: center;
}

.heading4 {
    font-size: inherit;
    margin: 1em 0;
}


/* Anchor (for in page linking)
   ========================================================================== */

.anchor {
    position: relative;
}

.anchor-target {
    position: absolute;
}

.heading .anchor-target {
    top: -140px;
}

.heading3 .anchor-target {
    top: -120px;
}

/* ==========================================================================
   Sections
   ========================================================================== */


/* Header
   ========================================================================== */

.header {
    position: fixed;
    z-index: 2;
    width: 800px;
    height: 100px;

    background: #A9D538;
}

/* Logo */

.logo {
    float: left;
    width: 37.5%;
    height: 100%;

    background-color: #B7E73C;
}

.logo-heading {
    /* Image replace */
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    width: 100%;
    height: 100%;
    margin: 0;

    background: url('../img/logo.png');
    background-size: 80%;
    background-position: 50% 50%;
    background-repeat: no-repeat;
}

/* Navigation */

.site-nav {
    display: table;
    width: 62.5%;
    vertical-align: middle;

    font-size: 17px;
    font-weight: lighter;
    letter-spacing: 0.8px;
}

.site-nav ul {
    display: table-row;
    margin: 0;
    padding: 0;
}

.site-nav li {
    display: table-cell;
}

.site-nav li:nth-child(even) {
    background: #A4CF35;
}

.site-nav a {
    display: inline-block;
    padding-top: 40px;
    height: 60px;
    width: 100%;
    text-align: center;
    vertical-align: middle;

    color: #2C2A27;
    text-decoration: none;
}

.site-nav a:hover,
.site-nav a:focus {
    background: #B7E73C;
}

/* Underlines */

.logo,
.site-nav a {
    position: relative;
}

.logo:after,
.site-nav a:after {
    content: "";
    position: absolute;
    display: block;
    height: 10px;
    width: 100%;
    bottom: -10px;
}

.logo:after {
    background: rgba(183, 231, 60, 0.5)
}

.site-nav a:after {
    background: rgba(169, 213, 56, 0.5);
}

.site-nav li:nth-child(even) a:after {
    background: rgba(164, 207, 53, 0.5)
}

.site-nav li:nth-child(even) a:hover:after,
.site-nav a:hover:after {
    background: rgba(183, 231, 60, 0.5)
}


/* Intro
   ========================================================================== */

.intro {
    position: relative;
    padding-top: 100px;

    border-bottom: 20px solid #2C2A27;
}

.intro-text {
    position: absolute;
    top: 250px;
    right: 0;
    width: 50%;
    z-index: 1;
}

.intro-text h2 {
    background: #2C2A27;
    color: #F1EEEA;

    padding: 15px 20px;

    font-family: 'Georga';
    font-weight: normal;
    font-style: italic;
    font-size: 30px;
}

/* About
   ========================================================================== */

.about {
    border-top: 10px solid #A9D538;
}

.about-statement {
    font-size: 1.17em;
    margin: 1em 0;

    font-weight: lighter;
}

.about-signature {
    text-align: right;
    font-weight: lighter;
    margin-top: -0.5em;
    margin-bottom: 2em;
}

.about-services {
            columns: 2;
    -webkit-columns: 2;
       -mox-columns: 2;

    margin-top: 1em;
    padding-left: 0;
}

.about-services li {
    margin-top: 0;
    margin-bottom: 1em;

    -webkit-column-break-inside: avoid;
    -moz-column-break-inside: avoid;
    -o-column-break-inside: avoid;
    -ms-column-break-inside: avoid;
    column-break-inside: avoid;
}

.about-services .heading4 {
    margin-top: 0;
    text-align: left;
}

.about-services strong {
    display: block;
}

/* Gallery */

.gallery {
    margin-top: 20px;
    overflow: hidden;

    color: #F1EEEA;
    font-style: italic;
    font-family: "Georgia";
    font-size: 18px;
    background: #4D3140;
}

.gallery img {
    width: 100%;
}

.gallery-col-3,
.gallery-col-2,
.gallery-col-1,
.gallery-row-3,
.gallery-row-2,
.gallery-row-1 {
    float: left;
    overflow: hidden;
    height: 100%;
    width: 100%;
}

.gallery-col-3  {   width: 600px;   }
.gallery-col-2  {   width: 400px;   }
.gallery-col-1  {   width: 200px;   }
.gallery-row-3  {   height: 600px;  }
.gallery-row-2  {   height: 400px;  }
.gallery-row-1  {   height: 200px;  }

.gallery-center-text {
    display: table;
    width: 100%;
    height: 100%;
}

.gallery-center-text-inner {
    display: table-cell;
    vertical-align: middle;
    padding: 0 40px;
}

.gallery-dark {
    background: #2C2A27;
}


/* Tariff
   ========================================================================== */

/* Layout */

.daily-tariff {
    overflow: hidden;
}

.daily-tariff-single,
.daily-tariff-multiple {
    float: left;
}

.daily-tariff-single {
    width: 40%;
}

.daily-tariff-multiple {
    width: 60%;

    background: #eee;
    border-left: 1px dashed #666;
    margin-left: -1px;
}

.price-list {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

/* Prices */

.price {
    position: relative;
    float: left;
    list-style-type: none;
    text-align: center;
    padding-top: 45px;
    margin-bottom: 20px;
}

.price-list--two .price {
    width: 50%;
}

.price-list--three .price {
    width: 33.333%;
}

.price-grade {
    padding: 0 10px;
    box-sizing: border-box;
    display: block;

    font-weight: normal;
}

.price-value {
    font-weight: lighter;
    font-size: 30px;
}

.price .price-value {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

.price-disclaimer {
    color: #A4CF35;
    text-decoration: none;
}

.price-value .price-disclaimer {
    position: absolute;
    margin-left: 5px;    
}

/* Additional costs */

.additional-costs-table {
    width: 100%;
}

.additional-cost {
    position: relative;
    display: block;
    width: 100%;
    margin-bottom: 20px;
}

.additional-costs-highlight {
    text-align: center;
    margin-bottom: 22px;
}

.additional-costs-condition,
.additional-costs-price,
.additional-costs-description {
    display: block;
    padding: 0;
}

.additional-costs-condition,
.additional-costs-price {
    width: 33.333%;
    float: left;
}

.additional-costs-condition {
    text-align: left;
    clear: right;
}

.additional-costs-price {
    clear: left;
}

.additional-costs-description {
    width: 66.666%;
    float: right;
    margin-top: -22px;
    margin-bottom: 1em;
}


/* Puppies */

.puppies-price {
    text-align: center;
}

.puppies-price p:last-child {
    margin-bottom: 0;
}

/* Contact
   ========================================================================== */

.contact .heading2,
.contact .heading3 {
    text-align: left;
}

.contact-row {
    display: table;
    width: 100%;
}

.contact-col {
    width: 50%;
    display: table-cell;
    position: relative;
}

.contact-col > .heading2 {
    margin-top: 0;
}

.contact-col--details {
    padding-right: 40px;
}

.contact-map {
    position: absolute;
    width: 100%;
    height: 100%;
    border: none;
}

.opening-times {
    padding-left: 0;
    list-style-type: none;
}

.opening-times li {
    margin-bottom: 1em;
}

.opening-times li:last-child {
    margin-bottom: 0;
}

.opening-times-hours {
    float: right;
    font-weight: bold;
}


/* Terms
   ========================================================================== */

.terms li {
    margin-bottom: 1em;
}


/* Footer
   ========================================================================== */

.site-footer {
    text-align: center;
    padding-top: 40px;
    padding-bottom: 40px;
    color: #999;
    font-size: 14px;
}

